--- a/bin/style.css
+++ b/bin/style.css
@@ -133,8 +133,24 @@
  }
  
  .table-row-cell:selected {
-     -fx-background-color: rgba(148, 148, 148, 0.993);
+     -fx-background-color: rgba(55, 64, 75,0.890);
      
      
  }
+ .list-cell:filled:selected:focused, .list-cell:filled:selected {
+    -fx-background-color: linear-gradient(#464646 0%, #464646 25%, #464646 75%, #464646 100%);
+    -fx-text-fill: white;
+}
+
+.list-cell:even { /* <=== changed to even */
+    -fx-background-color: rgb(192, 192, 192);
+}
+.list-cell:odd { /* <=== changed to even */
+    -fx-background-color: rgb(192, 192, 192);
+}
+
+.list-cell:filled:hover {
+    -fx-background-color: #464646;
+    -fx-text-fill: white;
+}
  
