the ability to regiser for a tournament or a team as a student and error messages for submiting an empty fields

--- a/bin/style.css
+++ b/bin/style.css
@@ -133,7 +133,7 @@
  }
  
  .table-row-cell:selected {
-     -fx-background-color: rgba(55, 64, 75,0.890);
+     -fx-background-color: rgb(138, 138, 138);
      
      
  }
